--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.2.2",
     "vue": "^3.2.13"
   },
   "devDependencies": {
